--- a/alert/package.json
+++ b/alert/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
+    "@agm/snazzy-info-window": "^1.0.0-beta.5",
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
@@ -24,6 +25,7 @@
     "@types/googlemaps": "^3.30.16",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "snazzy-info-window": "^1.1.1",
     "socket.io-client": "^2.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
